TEST_PROGRAMS/typing_benchmarks/invalid/opassign2.go
package main

func main() {
	var x rune
	var y int

	x <<= y
}
